--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="TemplateMo" />
 
-    <title>First Portfolio Bootstrap 5 Theme</title>
+    <title>Portfolio</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,12 +32,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <!-- <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="./assets/js/click-scroll.js"></script>
-    <script src="./assets/js/custom.js"></script>
-    <script src="./assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/jquery.sticky.js"></script> -->
-    <!-- <script src="./assets/js/magnific-popup-options.js"></script> -->
+    <script src="./assets/js/bootstrap.min.js"></script>
   </body>
 </html>
